@@ -1000,6 +1000,7 @@ plugins/plugins-available/reports2/templates/reports/style/custom.tt
 plugins/plugins-available/reports2/templates/reports_edit.tt
 plugins/plugins-available/reports2/templates/reports_edit_step2.tt
 plugins/plugins-available/reports2/templates/reports_email.tt
+plugins/plugins-available/reports2/templates/reports_scheduling.tt
 plugins/plugins-available/shinken_features/description.txt
 plugins/plugins-available/shinken_features/lib/Thruk/Controller/shinken_features.pm
 plugins/plugins-available/shinken_features/preview.png
