@@ -1,0 +1,131 @@
+﻿[% PROCESS _header.tt
+    js           => [ "plugins/reports2/flot-d7c58b5/jquery.flot.js",
+                      "plugins/reports2/flot-d7c58b5/jquery.flot.time.js",
+                      "plugins/reports2/flot-d7c58b5/jquery.flot.stack.js",
+                    ],
+%]
+[% PROCESS _message.tt %]
+[% USE date %]
+
+<table border="0" width="100%" cellspacing="0" cellpadding="0">
+  <tr>
+    <td align="left" valign="top" width="20%">
+      <table border="1" cellpadding="0" cellspacing="0" class='linkBox'>
+        <tr>
+          <td class='linkBox'>
+            <a href='extinfo.cgi?type=7'>back to overview</a><br>
+          </td>
+        </tr>
+      </table>
+    </td>
+    <td align="center" valign="top" width="60%">
+      <div align="center" class='dataTitle'>
+        Core Scheduling Overview
+      </div>
+    </td>
+    <td align="right" valign="bottom" width="20%">
+      [% PROCESS _help.tt topic = "reports2" %]
+    </td>
+  </tr>
+</table>
+
+<div id='tooltip'></div>
+<div align="center">
+<form>
+<table>
+  <tr>
+    <td rowspan=10>
+      <div id="queue_graph" style="height: 350px; width: 1000px;"></div>
+    </td>
+    <th>Look ahead seconds</th>
+    <td><input type="text" id="look_ahead" value=900 style="width: 50px;">s</td>
+  </tr>
+  <tr>
+    <th>Look back seconds</th>
+    <td><input type="text" id="look_back" value=60 style="width: 50px;">s</td>
+  </tr>
+  <tr>
+    <th>Group Checks</th>
+    <td><input type="text" id="group_seconds" value=1 style="width: 50px;">s</td>
+  </tr>
+  <tr>
+    <th>Update interval</th>
+    <td><input type="text" id="update_interval" value=5 style="width: 50px;">s</td>
+  </tr>
+  <tr>
+    <td colspan=2></td>
+  </tr>
+</table>
+</form>
+</div>
+
+<script type="text/javascript">
+<!--
+var updateInterval = 5000;
+var standard_xaxis = {
+    mode: "time",
+    timezone: "browser",
+    labelHeight: 0,
+    labelWidth: 0,
+    tickFormatter: function() { return(""); }
+};
+var standard_grid = {
+    backgroundColor: "#F0F0ED",
+    markings: [% encode_json_obj(markings) %]
+};
+var standard_legend = {
+    position: 'ne',
+    margin: [10, 40]
+};
+var queue_options = {
+    xaxis: { mode: "time",
+         timezone: "browser"
+    },
+    yaxes: [{
+               min: 0,
+               tickFormatter: function(val, axis) { return(val < axis.max ? val : "#"); }
+    }],
+    grid:      standard_grid,
+    legend:    standard_legend
+};
+var queue_series = [% encode_json_obj(scheduling_queue) %];
+
+jQuery().ready(function() {
+    var queue_plot   = jQuery.plot('#queue_graph', queue_series, queue_options);
+
+    queue_plot.draw();
+    window.setTimeout(updateGraph, updateInterval);
+});
+
+function updateGraph() {
+  updateInterval = jQuery('#update_interval').val()*1000;
+  jQuery.ajax({
+      url:      "reports2.cgi?action=scheduling&json=true",
+      type:     "POST",
+      data:     {
+        look_ahead: jQuery('#look_ahead').val(),
+        look_back: jQuery('#look_back').val(),
+        group_seconds: jQuery('#group_seconds').val()
+      },
+      dataType: "json",
+      success:  function(data) {
+        var queue_series = data['queue'];
+        var markings     = data['markings'];
+        queue_options.grid.markings = markings;
+
+        var queue_plot = jQuery.plot('#queue_graph', queue_series, queue_options);
+
+        var o = queue_plot.pointOffset({ x: standard_grid['markings'][0]['xaxis']['from'], y: 0});
+        var d = new Date(standard_grid['markings'][0]['xaxis']['from']);
+        jQuery('#queue_graph').append("<div style='position:absolute;left:"+(o.left+4)+"px;top:20px;color:#990000;font-size:smaller'>now ("+d.strftime("%H:%M:%S")+")</div>");
+
+        window.setTimeout(updateGraph, updateInterval);
+      },
+      error:  function(err) {
+        window.setTimeout(updateGraph, updateInterval*2);
+      }
+  });
+}
+
+-->
+</script>
