@@ -5,6 +5,13 @@
   <tr>
     <td align="left" valign="top" width="33%">
     [% PROCESS _infobox.tt %]
+    <table border="1" cellpadding="0" cellspacing="0" class='linkBox'>
+      <tr>
+        <td class='linkBox'>
+          <a href='reports2.cgi?action=scheduling'>Core Scheduling Graph</a><br>
+        </td>
+      </tr>
+    </table>
     </td>
     <td align="center" valign="middle" width="33%"></td>
     <td align="right" valign="bottom" width="33%">
